# context_pack

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  TECHNICAL.md
.codex/skills/context-pack-repo-profile/: SKILL.md
.github/: coverage-baseline.json
.github/workflows/: ci.yml  release.yml
scripts/: check_coverage_baseline.sh  generate_release_manifests.sh  install.ps1  install.sh
skills/explorer-context-pack/: SKILL.md
skills/explorer-context-pack/references/: actions.md  examples.md  qa-dod.md  recovery.md  role-modes.md  troubleshooting.md
src/: main.rs
src/adapters/: code_excerpt_fs.rs  mod.rs  storage_json.rs  storage_markdown.rs
src/adapters/mcp_stdio/: error_contract.rs  mod.rs  rpc.rs  schema.rs  tool_input.rs  tool_output.rs  transport.rs
src/app/: input_usecases.rs  mod.rs  output_usecases.rs  ports.rs  resolver.rs
src/domain/: errors.rs  models.rs  types.rs
tests/: e2e.rs  integration_test.rs  unit_output.rs
